# data-structs

./: .travis.yml  CMakeLists.txt  Doxyfile.in  README.md
.github/workflows/: ci.yml
cmake_scripts/: BuildType.cmake  Doctest.cmake  Documentation.cmake
include/: allsort.h  bst.h  copy_and_swap_idiom.h  debugmacro.h  list.h  vector.h
src/: CMakeLists.txt  vector.cpp
tests/: CMakeLists.txt  test_allsort.cpp  test_bst.cpp  test_copy_and_swap_idiom.cpp  test_list.cpp  test_vector.cpp
